--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ header {
 }
 
 .Modern-Slider .item-1 .image {
-  background-image: url(../img/pic2.jpg);
+  background-image: url(../img/imgbg.jpg);
 }
 
 .Modern-Slider .PrevArrow:before{content:'\f104';}
